# transcode-tcforge

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  STYLE  TODO  acinclude.m4  configure.in  hgversion.sh  transcode.spec.in
avilib/: Android.mk  Application.mk  Makefile.am  avidump.c  avilib.c  avilib.h  platform_tc.c
docs/: CHANGES-1.0-1.1  CHANGES-1.1-1.2  ChangeLog-1.1  DV-to-DVD-HOWTO.txt  Makefile.am  README.Inverse.Telecine.txt  README.cluster  README.dv  README.filter.modfps  README.rip  README.sync  README.vcd  README.xvid-credits  RELNOTES-0.6.13  RELNOTES-1.1.0  export-mods.txt  export_ffmpeg.txt  export_mp2.txt  faq  filter-help.txt  filter_dnr.txt  filter_logo.txt  filter_logoaway.txt  filter_text.txt  filter_yuvdenoise.txt  framerate.txt  import-mods.txt  import-xml.txt  import_alsa.txt  import_nvrec.txt  import_v4l2.txt  import_x11.txt  import_yuv.txt  make-filter-man.sh  make-import-man.sh  make-module-man.sed  socket_protocol.txt  tcmkmodhelp.py  template.cfg.txt
docs/html/: Makefile.am  dv.html  dvd.html  export_divx.html  export_divx4.php  export_divx5.php  export_fame.php  export_ogg.php  export_opendivx.php  export_xvid.php  import_avi.html  import_dv.html  import_dvd.html  import_mp3.html  import_mpeg2.html  import_mpeg3.html  import_null.html  import_nuv.html  import_ogg.php  import_raw.html  import_vob.html  index.html  intro.html  misc.html  modules.html  mpeg.html  other.html  post.html  pre.html  smart.html  sorry.html  subtitles.html  table.php
docs/man/: Makefile.am  avifix.1  aviindex.1  avimerge.1  avisplit.1  avisync.1  tccat.1  tccfgshow.1  tcdecode.1  tcdemux.1  tcexport.1  tcextract.1  tcmodchain.1  tcmodinfo.1  tcprobe.1  tcscan.1  tcxmlcheck.1  transcode.1  transcode.1.xml  transcode_export.1  transcode_filter.1  transcode_import.1  transcode_import.1.xml
docs/tech/: LIBRARIES  Makefile.am  OPTIMIZERS  architecture.txt  avi_comments.txt  clone.txt  export-API.txt  filter-API.txt  tcindent.sh  (+4 more)
encode/: Makefile.am  encode_copy.c  encode_dv.c  encode_faac.c  encode_im.c  encode_lame.c  encode_lavc.c  encode_lzo.c  encode_null.c  encode_theora.c  encode_vorbis.c  encode_x264.c  encode_xvid.c  encode_yuv4mpeg.c  lavc.cfg  x264.cfg
filter/: Makefile.am  deinterlace.c  filter_29to23.c  filter_32detect.c  filter_32drop.c  filter_aclip.c  filter_ascii.c  filter_astat.c  filter_barrel.c  filter_compare.c  filter_control.c  filter_cpaudio.c  filter_decimate.c  filter_denoise3d.c  filter_detectclipping.c  filter_detectsilence.c  filter_dnr.c  filter_doublefps.c  filter_facemask.c  filter_fieldanalysis.c  filter_fields.c  filter_fps.c  filter_hqdn3d.c  filter_invert.c  filter_ivtc.c  filter_levels.c  filter_list.awk.in  filter_logo.c  filter_logoaway.c  filter_lowpass.c  filter_mask.c  filter_modfps.c  filter_msharpen.c  filter_normalize.c  filter_null.c  filter_pp.c  filter_resample.c  filter_skip.c  filter_slowmo.c  filter_smartbob.c  (+12 more)
import/: Makefile.am  a52_decore.c  ac3scan.c  ac3scan.h  aux_pes.c  aux_pes.h  clone.c  clone.h  decode_a52.c  decode_dv.c  decode_lavc.c  decode_lzo.c  decode_mov.c  decode_mp3.c  decode_mpeg2.c  decode_ogg.c  decode_ulaw.c  decode_yuv.c  demux_pass.c  demuxer.c  demuxer.h  dvd_reader.c  dvd_reader.h  extract_ac3.c  extract_avi.c  extract_dv.c  extract_lzo.c  extract_mp3.c  extract_mpeg2.c  extract_mxf.c  extract_ogm.c  extract_pcm.c  extract_rgb.c  extract_yuv.c  fileinfo.c  frame_info.c  frame_info.h  import_ac3.c  import_alsa.c  import_avi.c  (+84 more)
libtc/: Makefile.am  framecode.c  framecode.h  libtc.h  mediainfo.h  ratiocodes.c  ratiocodes.h  tc_functions.c  tccodecs.c  tccodecs.h  tcformats.c  tcformats.h  tcframes.c  tcframes.h
libtcexport/: Makefile.am  encoder.c  encoder.h  export.c  export.h  export_profile.c  export_profile.h  multiplexor.c  multiplexor.h
libtcext/: Makefile.am  ext.c  ext_gm.c  ext_ogg.c  tc_avcodec.h  tc_ext.h  tc_lzo.h  tc_magick.h  tc_ogg.h
libtcmodule/: Makefile.am  modules.cfg  tcmodule-core.h  tcmodule-data.h  tcmodule-info.h  tcmodule-plugin.h  tcmodule-registry.h  tcmodule.c  tcmoduleinfo.c  tcmoduleregistry.c
libtcutil/: Makefile.am  cfgfile.c  cfgfile.h  common.h  ioutils.c  ioutils.h  libxio.c  logging.c  logging.h  memutils.c  memutils.h  optstr.c  optstr.h  static_optstr.h  static_tclist.h  static_tctimer.h  static_tcutil.h  static_xio.h  strlcat.c  strlcpy.c  strutils.c  strutils.h  tcglob.c  tcglob.h  tclist.c  tclist.h  tcthread.c  tcthread.h  tctimer.c  tctimer.h  tcutil.h  xio.h
mpeglib/: Makefile.am  README.mpeglib  elementary.c  mpeglib.c  mpeglib.h  mpeglib_private.h  packet.c  platform.h  probe.c  program.c  static_mpeglib.h
multiplex/: Makefile.am  multiplex_avi.c  multiplex_lavf.c  multiplex_null.c  multiplex_ogg.c  multiplex_pvn.c  multiplex_raw.c  multiplex_wav.c  multiplex_y4m.c  shout.cfg
src/: Makefile.am  audio_trans.c  audio_trans.h  cmdline.c  cmdline.h  cmdline_def.h  counter.c  counter.h  decoder.c  decoder.h  dl_loader.c  dl_loader.h  encoder-buffer.c  filter.c  filter.h  frame_threads.c  frame_threads.h  framebuffer.c  framebuffer.h  gtranscode2.py.in  probe.c  probe.h  runcontrol.c  socket.c  socket.h  split.c  split.h  synchronizer.c  synchronizer.h  transcode.c  transcode.h  video_trans.c  video_trans.h
testsuite/: Makefile.am  modules.cfg  newtest.pl  test-acmemcpy-speed.c  test-acmemcpy.c  test-average.c  test-bufalloc.c  test-cfg-filelist.c  test-cfg-filelist.sh  test-export-profile.c  test-framealloc.c  test-framecode.c  test-imgconvert.c  test-mangle-cmdline.c  test-ratiocodes.c  test-resize-values.c  test-tcframefifo.c  test-tcfunctions.c  test-tcglob.c  test-tclist.c  test-tclog.c  test-tcmodchain.sh  test-tcmodule.c  test-tcmoduleinfo.c  test-tcmoduleregistry.c  test-tcstrdup.c  test.pl  test_tcinterface.py
tools/: Makefile.am  aud_scan.c  aud_scan.h  aud_scan_avi.c  aud_scan_avi.h  avifix.c  aviindex.c  avimerge.c  avimisc.c  avimisc.h  avisplit.c  avisync.c  buffer.c  buffer.h  rawsource.c  rawsource.h  runcontrol.c  tccfgshow.c  tcexport.c  tcmodchain.c  tcmodinfo.c  tcmp3cut.c  tcstub.c  tcstub.h  tcyait.c
(+144 files in other folders)
